apps/nas/service-stubs/overseerr/service.yaml
apiVersion: v1
kind: Service
metadata:
  name: overseerr
  namespace: default
  annotations:
    service.cilium.io/global: "true"
    service.cilium.io/affinity: "remote"
spec:
  internalTrafficPolicy: Cluster
  ports:
  - name: http
    port: 5055
    protocol: TCP
    targetPort: http
  type: ClusterIP
