apps/nas/service-stubs/overseerr/httproute.yaml
apiVersion: gateway.networking.k8s.io/v1
kind: HTTPRoute
metadata:
  name: overseerr-envoy
  namespace: default
spec:
  parentRefs:
  - name: envoy-gw
    namespace: envoy-gateway-system
    sectionName: wahooli-https
  hostnames:
  - "overseerr.${domain_wahoo_li:=wahoo.li}"
  rules:
  - backendRefs:
    - name: overseerr
      port: 5055
